--- a/frontend/src/app/pages/instructor-profile/instructor-profile.component.html
+++ b/frontend/src/app/pages/instructor-profile/instructor-profile.component.html
@@ -2,8 +2,6 @@
 
     <div class="flex flex-col  lg:flex-row p-6 gap-0 lg:gap-6 mt-24">
   
-      <!-- Sidebar Section -->
-      <!-- Profile Header -->
       <div class="w-full lg:sticky fi lg:w-1/3 p-0">
         <div class="flex items-center mb-5 ">
           <img src="assets/img/Tewdros.jpg" alt="Profile Picture" class="w-20 h-20 rounded-full mr-4">
@@ -116,13 +114,13 @@
             <div class="flex space-x-4">
               <a href="#" class="text-blue-700 flex items-center space-x-1">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M..."></path>
+                  <path ></path>
                 </svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
               <a href="#" class="text-gray-700 flex items-center space-x-1">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M..."></path>
+                  <path ></path>
                 </svg>
                 <span class="text-sm">GitHub</span>
               </a>
