--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-white pt-8 font-poppins mt-24 lg:mt-12">
+<footer class="bg-white pt-8 font-poppins mt-4 ">
     <div class="container mx-4 lg:mx-8 grid grid-cols-2 md:grid-cols-4 gap-20 sm:gap-20 lg:gap-40">
         <!-- Logo and Description -->
         <div class="flex flex-col">
