--- a/frontend/src/app/pages/auth/register-student/register-student.component.html
+++ b/frontend/src/app/pages/auth/register-student/register-student.component.html
@@ -86,9 +86,9 @@
 
 
 
-<div class="h-screen bg-white-200 flex items-center justify-center">
+<div class="min-h-screen bg-white-200 flex items-center justify-center">
     <div class="flex flex-row w-full h-full">
-        <div class="flex-grow lg:flex-none w-full lg:w-1/2 h-full flex flex-col justify-start items-center bg-gray-100 px-8 lg:px-16 pt-6 pb-8 ">
+        <div class="flex-grow lg:flex-none w-full lg:w-1/2 h-full flex flex-col justify-start items-center bg-gray-100 px-8 lg:px-16 pt-6 pb-8">
             <div class="self-start mb-6">
                 <a href="#" class="text-orange-600 flex items-center">
                     <svg height="16px" width="16px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.999 511.999" xml:space="preserve" fill="#000000">
@@ -101,7 +101,6 @@
                     <span class="text-blue-900 ml-4">Home</span>
                 </a>
             </div>
-
          
             <div class="text-center w-full mb-0 ">
                 <h1 class="text-4xl font-bold">
@@ -112,75 +111,103 @@
             <div class="flex flex-col items-center w-full"> 
                 <h2 class="text-2xl mt-6 text-center mb-2 font-poppins font-medium">Sign up</h2>
 
-                <div class="w-[432px] h-[420px] bg-white rounded-2xl shadow-lg px-8 pt-6 ">
-                   
-                    <form #f="ngForm" [formGroup]="registerForm">
+                <div class="w-[432px] h-[470px] bg-white rounded-2xl shadow-lg px-8 pt-6 ">
+                     <form  *ngIf ="!showVerificationInput" #f="ngForm" [formGroup]="registerForm" (ngSubmit)="requestOtp()">
                         <div class="wrapper">
-                        <div class="mb-4">
-                            <label for="fullName" class="block text-gray-400 text-sm font-bold mb-2">Full Name <span id="asterisx">*</span></label>
-                            <input class="appearance-none border border-gray-300 rounded-md w-full py-2 px-3 text-gray-500 leading-tight focus:outline-none focus:shadow-outline" id="fullName" type="text" placeholder="John Doe" />
-                        </div>
-                        <div class="mb-4">
-                            <label for="email" class="block text-gray-400 text-sm font-bold mb-2">Email <span id="asterisx">*</span></label>
-                            <input class="appearance-none border border-gray-300 rounded-md w-full py-2 px-3 text-gray-500 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="you@example.com" />
-                        </div>
-                        <div class="mb-4">
-                            <label for="phone" class="block text-gray-400 text-sm font-bold mb-2">Phone number <span class="text-[#FD7606]">*</span></label>
-                            <div class=" wrapper flex items-center border border-gray-300 rounded-md">
-                            <ngx-intl-tel-input 
-                            [preferredCountries]="preferredCountries"
-                            [enableAutoCountrySelect]="true"
-                            [enablePlaceholder]="true"
-                            [searchCountryFlag]="true"
-                            [searchCountryField]="[
-                              SearchCountryField.Iso2,
-                              SearchCountryField.Name
-                            ]"
-                            [selectFirstCountry]="false"
-                            [selectedCountryISO]="CountryISO.India"
-                            [maxLength]="15"
-                            [phoneValidation]="true"
-                            [separateDialCode]="separateDialCode"
-                            [numberFormat]="PhoneNumberFormat.National"
-                            name="phone"
-                            formControlName="phoneNumber"
-                          >
-                          </ngx-intl-tel-input>
+                            <div class="mb-4">
+                                <label for="fullName" class="block text-gray-400 text-sm font-bold mb-2">Full Name <span id="asterisx">*</span></label>
+                                <input 
+                                   class="appearance-none border border-gray-300 rounded-md w-full py-2 px-3 text-gray-500 leading-tight focus:outline-none focus:shadow-outline" 
+                                   id="fullName" 
+                                   type="text" 
+                                   placeholder="John Doe" 
+                                   formControlName="fullName" />
                             </div>
-                        </div>
+                            <div class="mb-4">
+                                <label for="email" class="block text-gray-400 text-sm font-bold mb-2">Email <span id="asterisx">*</span></label>
+                                <input  
+                                class="appearance-none border border-gray-300 rounded-md w-full py-2 px-3 text-gray-500 leading-tight focus:outline-none focus:shadow-outline" 
+                                id="email" 
+                                type="email" 
+                                autocomplete="email"
+                                placeholder="you@example.com"
+                                formControlName="email"
+                                 />
+                            </div>
+                            <div class="mb-4">
+                                <label for="phone" class="block text-gray-400 text-sm font-bold mb-2">Phone number <span class="text-[#FD7606]">*</span></label>
+                                <div class="wrapper flex items-center border border-gray-300 rounded-md">
+                                    <ngx-intl-tel-input 
+                                       [preferredCountries]="preferredCountries"
+                                       [enableAutoCountrySelect]="true"
+                                       [enablePlaceholder]="true"
+                                       [searchCountryFlag]="true"
+                                       [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
+                                       [selectFirstCountry]="false"
+                                       [selectedCountryISO]="CountryISO.India"
+                                       [maxLength]="15"
+                                       [phoneValidation]="true"
+                                       [separateDialCode]="false" 
+                                       [numberFormat]="PhoneNumberFormat.National"
+                                       formControlName="phoneNumber"
+                                       (countryChange)="onCountryChange($event)">
+                                    </ngx-intl-tel-input>
+                                </div>
 
-                        <div class="mb-4 hidden" id="verificationSection">
-                            <label for="verificationCode" class="block text-gray-400 text-sm font-bold mb-2">Verification Code <span class="text-[#FD7606]">*</span></label>
-                            <input class="appearance-none border border-gray-300 rounded-md w-full py-2 px-3 text-gray-500 leading-tight focus:outline-none focus:shadow-outline" id="verificationCode" type="text" placeholder="Enter verification code" />
-                        </div>
-
-                        <div class="mb-4 ml-4">
-                            <label class="inline-flex items-center">
-                                <input type="checkbox" id="gg" class="form-checkbox h-4 w-4 text-white accent-[#003377]" checked>
-                                <span class="ml-2 text-gray-500">I agree to <a href="#" class="signuphere underline decoration-orange-600">Terms and conditions</a></span>
-                            </label>
-                        </div>
-                        
-                        <div id="recaptcha-container"></div>
-
-                        <div class="flex items-center justify-center">
-                            <button id="nextButton" class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377]" type="button" (click)="onRegister()">
-                                Sign up
-                            </button>
-                        </div>
-
-                        <div class="flex items-center justify-center hidden" id="verifyButtonContainer">
-                            <button id="verifyButton" class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377]" type="button" (click)="verifyCode()">
-                                Verify Code
-                            </button>
-                        </div>
+                                <div *ngIf="registerForm.get('phoneNumber')?.touched && registerForm.get('phoneNumber')?.invalid" class="text-red-500 text-sm mt-1">
+                                    <p *ngIf="registerForm.get('phoneNumber')?.errors?.['required']">Phone number is required.</p>
+                                    <p *ngIf="registerForm.get('phoneNumber')?.errors?.['validatePhoneNumber']">Enter a valid phone number.</p>
+                                  </div>
+                            </div>
+                    
+                            <div class="mb-4 ml-4">
+                                <label class="inline-flex items-center">
+                                    <input type="checkbox" id="gg" class="form-checkbox h-4 w-4 text-white accent-[#003377]" checked>
+                                    <span class="ml-2 text-gray-500">I agree to <a href="#" class="signuphere underline decoration-orange-600">Terms and conditions</a></span>
+                                </label>
+                            </div>
+                    
+                            <div id="recaptcha-container"></div>
+                    
+                            <div class="flex items-center justify-center">
+                                <button id="nextButton" 
+                                    class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377]" type="submit">
+                                    Next
+                                </button>
+                            </div>
                         </div>
                     </form>
 
-                         
-                        
 
-                    <p class="text-center text-gray-950 mt-4">
+                    <form *ngIf="showVerificationInput" (ngSubmit)="verifyOtp()">
+                        <div class="wrapper">
+                            <div class="mb-4">
+                                <label for="verificationCode"
+                                 
+                                class="block text-gray-400 text-sm font-bold mb-2">Verification Code <span class="text-[#FD7606]">*</span></label>
+                                <div class="wrapper flex items-center border border-gray-300 rounded-md">
+                                   <input type="number" class="p-3 border-gray-300"  [(ngModel)]="verificationCode"  [ngModelOptions]="{standalone: true}" />
+                                </div>
+                            </div>
+                    
+                            <div class="mb-4 ml-4">
+                                <label class="inline-flex items-center">
+                                    <input type="checkbox" id="gg" class="form-checkbox h-4 w-4 text-white accent-[#003377]" checked>
+                                    <span class="ml-2 text-gray-500">I agree to <a href="#" class="signuphere underline decoration-orange-600">Terms and conditions</a></span>
+                                </label>
+                            </div>
+                    
+                            <div id="recaptcha-container"></div>
+                    
+                            <div class="flex items-center justify-center">
+                                <button 
+                                    class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377]" type="submit">
+                                    verifyOtp
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                    <p class="text-center text-gray-950 mt-4 ">
                         Already have an account?
                         <a href="/login" class="text-[#FD7606]">Login</a>
                     </p>
@@ -188,9 +215,10 @@
             </div>
         </div>
 
-        <div class="lg:flex-grow lg:flex-none w-full lg:w-1/2 h-full">
+            <div class="flex-grow lg:flex-none w-full lg:w-1/2 min-h-screen">
             <img src="../assets/img/_6a43fce5-1b66-4238-af97-d3a30842283d.jpg" alt="People watching a video" class="w-full h-full object-cover" />
         </div>
+        
     </div>
 </div>
 
