--- a/frontend/src/app/pages/auth/login/login.component.html
+++ b/frontend/src/app/pages/auth/login/login.component.html
@@ -27,35 +27,36 @@
           <br />
   
           <div class="w-[400px] bg-white rounded-2xl shadow-lg p-8">
-            <form [formGroup]="phoneForm" >
+            <form [formGroup]="phoneForm" (ngSubmit)="onLogin()" >
                 <div class="mb-4">
                   <label for="phone" class="block text-gray-400 text-sm font-bold mb-2">
                     Phone number <span class="text-red-600">*</span>
                   </label>
-                  <ngx-intl-tel-input 
-                  [cssClass]="'custom'"
-                  [preferredCountries]="preferredCountries"
-                  [enableAutoCountrySelect]="true"
-                  [enablePlaceholder]="true"
-                  [searchCountryFlag]="true"
-                  [searchCountryField]="[
-                    SearchCountryField.Iso2,
-                    SearchCountryField.Name
-                  ]"
-                  [selectFirstCountry]="false"
-                  [selectedCountryISO]="CountryISO.India"
-                  [maxLength]="15"
-                  [phoneValidation]="true"
-                  [separateDialCode]="separateDialCode"
-                  [numberFormat]="PhoneNumberFormat.National"
-                  name="phone"
-                  formControlName="phone"
-                >
-                </ngx-intl-tel-input>
-                
+                  <div class=" wrapper flex items-center border border-gray-300 rounded-md">
+                    <ngx-intl-tel-input 
+                    [preferredCountries]="preferredCountries"
+                    [enableAutoCountrySelect]="true"
+                    [enablePlaceholder]="true"
+                    [searchCountryFlag]="true"
+                    [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
+                    [selectFirstCountry]="false"
+                    [selectedCountryISO]="CountryISO.India"
+                    [maxLength]="15"
+                    [phoneValidation]="true"
+                    [separateDialCode]="false" 
+                    [numberFormat]="PhoneNumberFormat.National"
+                    formControlName="phone"
+                    (countryChange)="onCountryChange($event)">
+                 </ngx-intl-tel-input>
+                </div>
+
+                <div *ngIf="phoneForm.get('phone')?.touched && phoneForm.get('phone')?.invalid" class="text-red-500 text-sm mt-1">
+                  <p *ngIf="phoneForm.get('phone')?.errors?.['required']">Phone number is required.</p>
+                  <p *ngIf="phoneForm.get('phone')?.errors?.['validatePhoneNumber']">Enter a valid phone number.</p>
+                </div>
                 </div>
                 <button id="nextButton"
-                class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377] " type="button">
+                class="text-white font-bold py-2 px-4 rounded-3xl w-full bg-[#003377] " type="submit">
                 Next
             </button>
               </form>
